src/portfolio.css
:root {
  --primary-color: rgb(8, 8, 167);
  --box-shadow: 4px 6px 10px 1px rgba(12, 10, 10, 0.6);
  --secondary-color: rgb(224, 241, 243);
}
body {
  background: rgb(248, 246, 246);
}
h3 {
  font-family: 'Playfair Display', serif;
  font-size: 40px;
}
p {
  font-family: 'Poppins', sans-serif;
  font-size: 24px;
  font-weight: normal;
}
img {
  border-radius: 12px;
  box-shadow: var(--box-shadow);
}
footer {
  margin: 60px;
}
footer .contact-box {
  background: var(--secondary-color);
  border-radius: 8px;
  padding: 30px 120px;
  box-shadow: var(--box-shadow);
}
.email-contact a {
  text-decoration: none;
  font-size: 35px;
  font-weight: bolder;
  color: black;
}
.email-contact a:hover {
  color: var(--primary-color); 
}
footer .social-contact a {
  margin: 0 20px;
  padding: 16px 24px;
  font-size: 30px;
  background: var(--secondary-color);
  color: var(--primary-color);
  border-radius: 50%;
  box-shadow: var(--box-shadow);
}
footer .social-contact a:hover {
  color: var(--secondary-color);
  background: var(--primary-color);
}
p .content  {
 font-size: 24px;
}
.contact a{
  text-decoration: none;
  color: black;
  font-size: 24px;
}
.contact a:hover {
  color: var(--primary-color);
  font-weight: bold;
}
.contact p {
  font-size: 30px;
}
.content-container {
  margin-top: 60px;
}
.section-container {
  margin-top: 120px;
}
.hero {
  box-shadow: var(--box-shadow);
}
.hero h2 {
  font-family: 'Poppins', sans-serif;
  font-size: 36px;
  font-weight: bold;
}
.hero h1 {
  font-family: 'Playfair Display', serif;
  font-size: 96px;
  color: var(--primary-color);
}
.hero p {
  font-family: 'Poppins', sans-serif;
  font-size: 36px;
  font-weight: normal;
 }
 .hero-intro {
  margin-top: 175px;
}
.world {
 padding: 8px 12px;
 border-radius: 50%;
 box-shadow: var(--box-shadow);
 color: var(--primary-color);
}
.btn-hero {
  border-radius: 6px;
  background-color: var(--primary-color);
  box-shadow: var(--box-shadow);
  font-size: 18px;
  color: white;
  padding: 5px 20px;
}
.btn-about {
  border-radius: 6px;
  background-color: var(--primary-color);
  box-shadow: var(--box-shadow);
  font-size: 28px;
  color: white;
  padding: 15px 5px;
  text-decoration: none;
}
.btn-contact {
  border-radius: 6px;
  background-color: var(--primary-color);
  box-shadow: var(--box-shadow);
  font-size: 18px;
  color: white;
  padding: 5px 20px;
  margin: 25px 40px;
  text-decoration: none;
}
.btn-launch {
  border-radius: 6px;
  background-color: var(--primary-color);
  box-shadow: var(--box-shadow);
  font-size: 18px;
  color: white;
  padding: 8px 20px;
  text-decoration: none;
}
.btn:hover {
  background-color:  var(--secondary-color);
  color:  var(--primary-color);
  border: 1px solid var(--primary-color);
}
.hero {
  background: var(--secondary-color);
  padding: 150px 25px;
  text-align: center;
}
 .project:hover {
   opacity: 50%;
}
.section-wrapper {
  padding: 0 25px;
}
.title {
  font-family: 'Playfair Display', serif;
  font-size: 55px;
  color: var(--primary-color);
}
.title2 {
  font-family: 'Playfair Display', serif;
  font-size: 40px;
  color: var(--primary-color); 
}
.tiny {
  color:  var(--primary-color);
}
@media (max-width: 760px) {
  .hero h1 {
    font-size: 48px;
  }
  .hero h2 {
    font-size: 22px;
  }
  .hero p {
    font-size: 14px;
  }
  .hero {
    text-align: center;
    padding: 75px;
  }
  h3 {
    font-size: 24px;
  }
  .title {
    font-size: 40px;
  }
  .title {
    font-size: 24
    ;
  }
  .email-contact a{
    font-size: 18px;
  }
  .content {
    font-size: 16px;
  }
  .contact p{
    font-size: 16px;
  }
  .btn-about {
    font-size: 16px;
  }
  footer .social-contact a {
    font-size: 22px;
  }
 .content-container {
   text-align: center;
   font-size: 16px;
 }
 .section-wrapper {
   text-align: center;
   margin-top: 0px;
 }
}

